--- a/exercise1.html
+++ b/exercise1.html
@@ -8,7 +8,7 @@
     <meta 
     name="description"
     content="A wonderful replica of the HAMK website."> 
-    <title>Exercise 1</title>
+    <title>Exercise 1 Kasper Aho</title>
 </head>
 <body>
     <h1>HAMK at home</h1>
